--- a/html/apps/barchart/css/style.css
+++ b/html/apps/barchart/css/style.css
@@ -2,6 +2,14 @@ body, html {
   background-color: gray !important;
 }
 
+.layout-margin>*{
+  margin:0;
+}
+
+
+md-tabs .md-tab.md-active{
+  color: black;
+}
 md-content.md-default-theme, md-content {
     color: rgba(0,0,0,0.87);
     background-color: rgb(66, 66, 66);
