--- a/html/apps/loginpage/css/style.css
+++ b/html/apps/loginpage/css/style.css
@@ -6,26 +6,51 @@ p {
 	color: #fff;
 }
 
+label.error{
+	color: red !important;
+}
+input.error{
+	border: 2px solid red !important;
+}
+
 .form {
-	width:375px;
+	width:540px;
 	height: auto;
 	margin: auto;
 }
 
-.form input {
+.fields {
+	width: auto;
+	height: auto;
+}
+
+.fields input {
 	border: none;
 	background: #fff;
   	font-weight:400;
-	display: block;
 	color: #000;
 	font-size: 15px;
 	outline: none;
-	width: 100%;
+	width: 70%;
 	margin: auto;
 	padding: 24px 12px 24px 12px;
 }
+
+.fields label {
+	font-size: 15px;
+	float: right;
+	margin-top: 5%;
+}
+
+.fields input[id = "email"] {
+	border-radius: 7px 7px 0 0;
+}
+.fields input[id = "pass"] {
+	border-radius: 0 0 7px 7px;
+}
+
 .bar {
-	width: 100%;
+	width: 70%;
 	height: 1px;
 	background: #fff;
 }
@@ -36,21 +61,14 @@ p {
 	display: block;
 	background: #d1d1d1;
 }
-.form input[type="text"] {
-	border-radius: 7px 7px 0 0;
-}
-.form input[name = "pass"] {
-	border-radius: 0 0 7px 7px;
-}
 
 .form button {
-	width: 100%;
+	width: 70%;
 	border-radius: 7px;
 	background: GreenYellow;
 	text-decoration: center;
 	border: none;
 	color: #51771a;
-  	margin-top:-5px;
 	padding-top: 14px;
 	padding-bottom: 14px;
 	outline: none;
@@ -58,6 +76,32 @@ p {
 	border-bottom: 3px solid #307d63;
 	cursor: pointer;
 }
+
+.options {
+	width:70%;
+    margin:0 auto;
+    height: auto;
+    display:inline-block;
+}
+
+#rememberme{
+	display: inline-block;
+	float: left;
+	color: #fff;
+}
+
+#remember{
+	display: inline-block;
+	margin-left: 10px;
+	width: 20px;
+}
+
+#signupopt{
+	float: right;
+	font-size: 15px;
+	display: inline-block;
+}
+
 .form p:hover{
 	color:GreenYellow;
 	transition: color 0.8s;
